css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");

:root {
  --primary-color: #357c6b;
  --secondary-color: #858383;
}

* {
  font-family: "Poppins", "Sans-serif";
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  line-height: 1.6;
}

.bg-img {
  background: url(../img/background.png);
  background-size: cover;
  background-position: center;
}

h1,
h3 {
  padding: 0;
  margin: 0;
}

.btn:hover {
  background: #0786a1;
  transition: background 0.2s ease-in;
}

.sub-title {
  font-weight: bold;
  margin: 1em 0;
}

.fa,
li,
p {
  color: var(--secondary-color);
  padding: 0;
  margin: 0;
}

img {
  max-width: 100%;
}

.text-center {
  text-align: center;
}

.btn {
  background: var(--primary-color);
  color: #ffffff;
  border: none;
  border-radius: 10px;
  padding: 5px 10px;
  margin: 0 5px;
  text-decoration: none;
  -webkit-box-shadow: -5px 0px 16px -6px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: -5px 0px 16px -6px rgba(0, 0, 0, 0.75);
  box-shadow: -5px 0px 16px -6px rgba(0, 0, 0, 0.75);
}

.buttons {
  margin: 1.5em 0;
}

.container {
  margin-inline: auto;
  width: min(90%, 70.5rem);
  overflow: hidden;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.header {
  display: flex;
  justify-content: space-between;
  min-height: 70px;
  align-items: center;
}

.logo {
  font-weight: bold;
  color: var(--primary-color);
}

.contacts {
  display: none;
}

section {
  padding: 3rem 0;
}

.split {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

h1 {
  font-size: 30px;
}

.showcase {
  text-align: center;
  margin: 2em 0;
  position: relative;
  padding: 50px 0;
}

.profile {
  margin: 1em 0;
  display: block;
}

.skill-grid {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  justify-items: center;
  align-items: center;
}

.skills-title {
  margin: 2em 0;
}

.projects_3 {
  margin: 1em 0;
}

.overlay-img {
  position: relative;
}

.overlay-img:hover .overlay-hover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0786a1;
  opacity: 0.7;
  transition: background 0.2s ease-in;
}

.overlay-img:hover .project-logo {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
}

.project-logo {
  display: none;
}

.project-logo .fa {
  color: rgb(255, 255, 255);
}

footer {
  background: #353535;
  padding: 30px 0;
}

@media (min-width: 40em) {
  h1 {
    font-size: 60px;
  }

  .split {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
  }

  .split > * {
    flex-basis: 100%;
  }

  .split > * + * {
    margin-left: 2em;
  }

  .contacts {
    display: flex;
    justify-content: space-evenly;
    width: 50%;
  }

  .line {
    border-right: 0.5px solid var(--secondary-color);
  }

  .btn {
    padding: 10px 20px;
  }
}

